--- a/#source/hovers/passing_underline.scss
+++ b/#source/hovers/passing_underline.scss
@@ -1,5 +1,6 @@
 .passing-underline {
     position: relative;
+    z-index: 150;
 }
 .passing-underline::before {
     content: '';
@@ -13,6 +14,7 @@
     transform-origin: right;
     transform: scaleX(0);
     transition: transform .3s ease-in-out;
+    
   }
 
 .passing-underline:hover::before {
