--- a/#source/scss/hero.scss
+++ b/#source/scss/hero.scss
@@ -1,5 +1,3 @@
-
-// @import  '$default-bg';
 .hero {
     &__content {
         color: rgb(255, 255, 255);
@@ -8,14 +6,16 @@
         display: flex;//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
         flex-direction: column;//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
         padding-bottom: 65px;
+        @media(max-width: 661.98px) {
+            padding-bottom: 0px;
+        }
         position: relative;
         z-index: 50;
-        // background-color: 
     }
     &__content::before {
         content: "";
         position: absolute;
-        background-color:$default-bg;
+        background-color: $default-bg;
         bottom: 0;
         right: -240px;
         width: 200vw;
@@ -23,22 +23,52 @@
         z-index: -10;
     }
     &__main-title {
+        position: relative;
         font-size: 74px;
+        @media(max-width: 661.98px) {
+            font-size: 64px;
+            margin-bottom: 10px;
+        }  
+        @media(max-width: 491.98px) {
+            font-size: 54px;
+        }  
         font-weight: 800;
         line-height: 120.27027%; /* 89/74 */
         margin-bottom: 20px;
         text-transform: uppercase;
+    }
+    @media(min-width: 1200px) {
+        &__content::after {
+            content: url("/img/hero/pancake.svg");
+            position: absolute;
+            bottom: -150px;
+            right: -578px;
+           
+        }
+        &__main-title::after {
+            content: "";
+            position: absolute;
+            width: 1000px;
+            height: 840px;
+            right: -60%;
+            bottom: -650%;
+            background: radial-gradient(50.00% 50.00% at 50% 50%,rgb(242, 168, 80),rgba(228, 166, 92, 0) 100%);
+            z-index: -10;
+        }
     }
     &__text {
         font-size: 18px;
         font-weight: 600;
         line-height: 144.444444%; /* 26/18 */
         margin-bottom: 40px;
+        @media(max-width: 661.98px) {
+            margin-bottom: 20px;
+        }
     }
     &__button {
-       max-width: 195px; //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    }
-    &__links-block {
+        @media(min-width: 400px) {
+                max-width: 195px;
+         }       
     }
 }
 
@@ -47,7 +77,10 @@
     width: 863px;
     &__social {
        padding: 35px 38px;
-
+       @media(max-width: 661.98px) {
+        background-color: $default-bg;
+        margin-left: -4%;
+    }  
     }
     &__list {
         display: flex;
@@ -56,38 +89,50 @@
  
         align-items: center;
     }
-
-    // .links-block__item
-
-    &__item {
-    }
-
-    // .links-block__link
-
-    &__link {
-    }
-    &__link:hover {
-
-    } 
-    &__icon {
-    }
-
-    // .links-block__phone
-
     &__phone {
         background-color: $default-bg;
         width: 100%;
         display: flex;
         align-items: flex-end;
         padding: 0px 0px 20px 20px;
+        @media(max-width: 492.98px) {
+            padding: 0px 0px 15px 0px;
+            a {
+                display: flex;
+                flex-direction: column;
+            }
+        }
         a {
             color: #ffff;
             font-size: 18px;
             font-weight: 700;
             line-height: 144.444444%; /* 26/18 */
+            z-index: 50;
+            
             span {
+                display: inline-block;
+                margin-left: 14px;
+                @media(max-width: 492.98px) {
+                    margin-left: 0;
+                }
                 font-weight: 500;
-            }
+            } 
         }
+    }
+}
+@media(max-width: 991.98px) {
+    .hero__content::before {
+        right: -34px;
+    }
+    .links-block {
+        width: 657px;
+    }
+}
+@media(max-width: 791.98px) {
+    .hero__content::before {
+        right: -334px;
+    }
+    .links-block {
+        width: 1000px;
     }
 }
