--- a/#source/scss/index.scss
+++ b/#source/scss/index.scss
@@ -5,9 +5,13 @@ $default-bg: #C98A40;
 @import url(https://fonts.googleapis.com/css?family=Poppins:regular,400,500,600,700,800,900,&display=swap);
 @import "null.scss";
 @import "reusable.scss";
-@import "hero.scss";
+@import "ibg.scss";
 @import "../hovers/passing_underline.scss";
+@import "hero.scss";
+@import "work_about.scss";
+@import "services_reviews.scss";
 @import "../raiting/raiting.scss";
+@import "../contact/contact.scss";
 // ------------------------------------------------------------------------------
 
 // ------------------------------------------------------------------------------
@@ -46,15 +50,31 @@ body {
     padding-top: 28px;
     &__logo {
         flex: 0 1 248px;
-        
     }
 }
 .page {
     &__hero {
+        // background: url('/img/hero/bakery.svg');
         padding-top: 208px;
-        // padding-bottom: 65px;
+        @media(max-width: 661.98px) {
+            padding-top: 108px;
+        }
+        padding-top: 208px;
+        @media(max-width: 491.98px) {
+            padding-top: 68px;
+        } 
     }
+    &__work, &__about, &__services, &__testymonials, &__contact {
+        padding: 50px 0px;
+    }
+    @media(max-width: 791.98px) {
+        &__work, &__about , &__services, &__testymonials, &__contact {
+            padding: 30px 0px;
+        }
+    }
+// padding-bottom: 65px;
 }
+
 .footer {
     background: rgb(88, 65, 37);
     height: 117px;
