--- a/#source/scss/reusable.scss
+++ b/#source/scss/reusable.scss
@@ -10,7 +10,6 @@
         text-transform: uppercase;
         padding: 18px 53px;
         transition: background-color 0.4s ease 0s;
-        
     }
     &__button:hover {
         background: rgb(231, 166, 1);
@@ -22,5 +21,23 @@
         line-height: 96%;
         text-align: right;
         text-transform: uppercase;
+        @media(max-width: 1199.98px) {
+            font-size: 6.386rem;
+        }
+        @media(max-width: 991.98px) {
+            font-size: 6.386rem;
+        }
+        @media(max-width: 791.98px) {
+            font-size: 5rem;
+        }
+        @media(max-width: 491.98px) {
+            font-size: 3.9rem;
+        }
     }
+}
+.article-title {
+    color: rgb(201, 138, 64);
+    font-size: 16px;
+    font-weight: 900;
+    line-height: 150%; /* 24/16 */
 }
