--- a/#source/scss/services_reviews.scss
+++ b/#source/scss/services_reviews.scss
@@ -65,7 +65,7 @@
 }
 //------------------------------------------------------------------------------
 .testymonials {
-    background: #C98A40 url('/img/white.svg') ;
+    background: #C98A40 url('../img/white.svg') ;
     &__body {
         display: flex;
         flex-direction: column;
